Enforce C99 support in the compiler

--- a/configure.ac
+++ b/configure.ac
@@ -3,6 +3,8 @@ AC_INIT([detox], [2.0.0-alpha1], [detox.dharple at gmail.com], [], [https://gith
 AM_INIT_AUTOMAKE([foreign -Wall -Werror])
 
 AC_PROG_CC
+#AC_PROG_CC_STDC
+AC_PROG_CC_C99
 AM_PROG_LEX
 AC_PROG_YACC
 
