Fix line and PP separator in 0x20xx Unicode

--- a/table/unidecode.tbl.sample
+++ b/table/unidecode.tbl.sample
@@ -5291,11 +5291,8 @@ start
 0x2025		..	# TWO DOT LEADER
 0x2026		...	# HORIZONTAL ELLIPSIS
 0x2027		.	# HYPHENATION POINT
-0x2028		"
-"	# LINE SEPARATOR
-0x2029		"
-
-"	# PARAGRAPH SEPARATOR
+0x2028		" "	# LINE SEPARATOR
+0x2029		" "	# PARAGRAPH SEPARATOR
 0x202F		" "	# NARROW NO-BREAK SPACE
 
 0x2030		%0	# PER MILLE SIGN
