Update Makefiles to ensure that make distcheck works (#59)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -23,6 +23,8 @@ AM_YFLAGS = -d
 
 AM_LFLAGS = -i
 
+EXTRA_DIST = *.h
+
 bin_PROGRAMS = \
 	detox \
 	inline-detox
@@ -64,10 +66,3 @@ test_table_regression_SOURCES = \
 	table.c \
 	table_dump.c \
 	test_table_regression.c
-
-builtin_table.c: generate-builtin-table builtin_table.c.in ../table/*.sample
-	cp builtin_table.c.in builtin_table.c
-	./generate-builtin-table ../table/safe.tbl.sample | sed -e's/NEW/safe/' >> builtin_table.c
-	./generate-builtin-table ../table/iso8859_1.tbl.sample | sed -e's/NEW/iso8859_1/' >> builtin_table.c
-	./generate-builtin-table ../table/unicode.tbl.sample | sed -e's/NEW/unicode/' >> builtin_table.c
-	./generate-builtin-table ../table/cp1252.tbl.sample | sed -e's/NEW/cp1252/' >> builtin_table.c
