--- a/.github/workflows/regress.yml
+++ b/.github/workflows/regress.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest, macos-latest
 
     steps:
     - uses: actions/checkout@v2
