Test macOS build 3rd attempt (#35)

--- a/.github/workflows/regress.yml
+++ b/.github/workflows/regress.yml
@@ -26,6 +26,8 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
+    - name: brew install automake
+      run: brew install automake
     - name: autoreconf
       run: autoreconf --install
     - name: configure
