--- a/.github/workflows/regress.yml
+++ b/.github/workflows/regress.yml
@@ -26,8 +26,8 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-    - name: brew install automake
-      run: brew install automake
+    - name: brew install
+      run: brew install automake coreutils
     - name: autoreconf
       run: autoreconf --install
     - name: configure
