--- a/.github/workflows/regress.yml
+++ b/.github/workflows/regress.yml
@@ -17,7 +17,24 @@ jobs:
       run: ./configure
     - name: make
       run: make
+    - name: simple test
+      run bin/simple-test.sh
     - name: make check
       run: make check
     - name: make distcheck
       run: make distcheck
+
+  build-macos:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: brew install
+      run: brew install automake
+    - name: autoreconf
+      run: autoreconf --install
+    - name: configure
+      run: ./configure
+    - name: make
+      run: make
+    - name: simple test
+      run bin/simple-test.sh
