--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,3 +7,4 @@ bin_PROGRAMS = detox inline-detox
 detox_SOURCES = detox.c file.c clean_string.c table.c parse_table.c config_file_yacc.y config_file_lex.l config_file_spoof.c config_file_dump.c parse_options.c
 inline_detox_SOURCES = $(detox_SOURCES)
 
+EXTRA_DIST = *.h
