--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,10 @@
 SUBDIRS = src
-dist_doc_DATA = README.md CHANGELOG.md
+dist_doc_DATA = \
+	BUILD.md \
+	CHANGELOG.md \
+	LICENSE \
+	README.md \
+	THANKS.md
 
 dist_man1_MANS = man/detox.1 man/inline-detox.1
 dist_man5_MANS = man/detoxrc.5 man/detox.tbl.5
