--- a/.github/workflows/regress.yml
+++ b/.github/workflows/regress.yml
@@ -38,3 +38,7 @@ jobs:
       run: make
     - name: simple test
       run: bin/simple-test.sh
+    - name: make check
+      run: make check
+    - name: make distcheck
+      run: make distcheck
