--- a/.github/workflows/regress.yml
+++ b/.github/workflows/regress.yml
@@ -29,7 +29,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: brew install
-      run: brew install automake
+      run: brew install automake coreutils
     - name: autoreconf
       run: autoreconf --install
     - name: configure
