Make room for unit tests (#67)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = src
+SUBDIRS = src tests
 dist_doc_DATA = \
 	BUILD.md \
 	CHANGELOG.md \
@@ -22,9 +22,6 @@ EXTRA_DIST = man/detox.1.pdf man/inline-detox.1.pdf man/detoxrc.5.pdf man/detox.
 
 internals:
 	bin/generate.sh
-
-check:
-	if [ -x $(top_srcdir)/tests/test.sh ] ; then $(top_srcdir)/tests/test.sh src/detox ; else src/detox -V ; src/detox -L -v ; fi
 
 valgrind:
 	USE_VALGRIND=1 $(top_srcdir)/tests/test.sh src/detox
