--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -1,5 +1,9 @@
+if BUILDCHECK
+
 TESTS = check_clean_string
 check_PROGRAMS = check_clean_string
 check_clean_string_SOURCES = check_clean_string.c
 check_clean_string_CFLAGS = @CHECK_CFLAGS@
 check_clean_string_LDADD = $(top_builddir)/src/clean_string.o @CHECK_LIBS@
+
+endif # BUILDCHECK
