Fix bug with GitHub action for building and running unit tests (#67)

--- a/.github/workflows/regress.yml
+++ b/.github/workflows/regress.yml
@@ -44,7 +44,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: apt install
-      run: apt install check
+      run: sudo apt install check
     - name: autoreconf
       run: autoreconf --install
     - name: configure
