Refine unit test Makefile (#67)

--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -1,30 +1,24 @@
 if BUILDCHECK
 
-TESTS = \
-	test_clean_lower \
-	test_clean_safe \
-	test_clean_wipeup
+AM_CFLAGS = \
+	@CHECK_CFLAGS@ \
+	-DYY_NO_INPUT \
+	-DYY_NO_UNPUT \
+	-D_FORTIFY_SOURCE=2 \
+	-Wall \
+	-Werror
 
-check_PROGRAMS = \
-	test_clean_lower \
-	test_clean_safe \
-	test_clean_wipeup
-
-test_clean_lower_CFLAGS = @CHECK_CFLAGS@
-test_clean_lower_LDADD = \
-	$(top_builddir)/src/clean_string.o \
-	@CHECK_LIBS@
-
-test_clean_safe_CFLAGS = @CHECK_CFLAGS@
-test_clean_safe_LDADD = \
+AM_LDFLAGS = \
 	$(top_builddir)/src/clean_string.o \
 	$(top_builddir)/src/table.o \
 	$(top_builddir)/src/builtin_table.o \
 	@CHECK_LIBS@
 
-test_clean_wipeup_CFLAGS = @CHECK_CFLAGS@
-test_clean_wipeup_LDADD = \
-	$(top_builddir)/src/clean_string.o \
-	@CHECK_LIBS@
+TESTS = \
+	test_clean_lower \
+	test_clean_safe \
+	test_clean_wipeup
+
+check_PROGRAMS = $(TESTS)
 
 endif # BUILDCHECK
