Add code coverage report (#67)

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,10 @@ test-table-regression
 
 # Built Packages
 /detox-*.tar.gz
+
+# Coverage files
+*.gcda
+*.gcno
+*.gcov
+/coverage.info
+/coverage/
