--- a/Makefile.am
+++ b/Makefile.am
@@ -39,7 +39,7 @@ coverage:
 	lcov --capture --directory src --output-file coverage.info
 	genhtml coverage.info --output-directory coverage
 
-coverge-text:
+coverage-text:
 	cd src && make coverage-text
 
 else
