--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -13,7 +13,6 @@ AM_LDFLAGS = \
 	$(top_builddir)/src/clean_string.o \
 	$(top_builddir)/src/detox_struct.o \
 	$(top_builddir)/src/parse_table.o \
-	$(top_builddir)/src/table_dump.o \
 	$(top_builddir)/src/table.o \
 	@CHECK_LIBS@
 
@@ -22,7 +21,7 @@ TESTS = \
 	test_clean_max_length \
 	test_clean_safe \
 	test_clean_wipeup \
-	test_table_regression
+	test_table_resize
 
 check_PROGRAMS = $(TESTS)
 
