--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -17,6 +17,7 @@ AM_LDFLAGS = \
 	@CHECK_LIBS@
 
 TESTS = \
+	test_clean_iso8859_1 \
 	test_clean_lower \
 	test_clean_max_length \
 	test_clean_safe \
