Convert structs to typedefs: filelist (#71)

--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -16,6 +16,7 @@ AM_LDFLAGS = \
 	$(top_builddir)/src/config_file_spoof.o \
 	$(top_builddir)/src/config_file_yacc.o \
 	$(top_builddir)/src/detox_struct.o \
+	$(top_builddir)/src/filelist.o \
 	$(top_builddir)/src/parse_options.o \
 	$(top_builddir)/src/parse_table.o \
 	$(top_builddir)/src/table.o \
@@ -28,6 +29,7 @@ TESTS = \
 	test_clean_safe \
 	test_clean_utf_8 \
 	test_clean_wipeup \
+	test_filelist \
 	test_spoof_config_file \
 	test_table_resize
 
