--- a/tests/unit/.gitignore
+++ b/tests/unit/.gitignore
@@ -7,6 +7,7 @@ test_clean_iso8859_1
 test_clean_lower
 test_clean_max_length
 test_clean_safe
+test_clean_uncgi
 test_clean_utf_8
 test_clean_wipeup
 test_filelist
