--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -28,6 +28,7 @@ TESTS = \
 	test_clean_lower \
 	test_clean_max_length \
 	test_clean_safe \
+	test_clean_uncgi \
 	test_clean_utf_8 \
 	test_clean_wipeup \
 	test_filelist \
