--- a/.github/workflows/regress.yml
+++ b/.github/workflows/regress.yml
@@ -61,3 +61,22 @@ jobs:
       run: make check
     - name: make distcheck
       run: make distcheck
+
+  build-ubuntu-maintainer-clean:
+    runs-on: ubuntu-20.04
+    steps:
+    - uses: actions/checkout@v2
+    - name: autoreconf
+      run: autoreconf --install
+    - name: configure
+      run: ./configure
+    - name: make maintainer-clean
+      run: make maintainer-clean
+    - name: autoreconf
+      run: autoreconf --install
+    - name: configure
+      run: ./configure --with-check
+    - name: make
+      run: make
+    - name: make check
+      run: make check
