--- a/.github/workflows/regress.yml
+++ b/.github/workflows/regress.yml
@@ -74,6 +74,8 @@ jobs:
       run: make maintainer-clean
     - name: autoreconf
       run: autoreconf --install
+    - name: apt install
+      run: sudo apt install check
     - name: configure
       run: ./configure --with-check
     - name: make
