--- a/tests/unit/.gitignore
+++ b/tests/unit/.gitignore
@@ -13,5 +13,6 @@ test_clean_wipeup
 test_filelist
 test_spoof_config_file
 test_table_regression
+test_table_max_length
 test_table_resize
 test_wrapped
