Rewrite inline detox parsing; add configure switch for debugging (resolves #74)

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -1,5 +1,8 @@
 /* src/config.h.in.  Generated from configure.ac by autoheader.  */
 
+/* Enables verbose debugging in key points */
+#undef DEBUG
+
 /* Define to 1 if you have the `getopt_long' function. */
 #undef HAVE_GETOPT_LONG
 
