Fixed build when the stat struct is missing st_blocks (#77)

--- a/configure.ac
+++ b/configure.ac
@@ -7,6 +7,7 @@ AM_PROG_LEX
 AC_PROG_YACC
 
 AC_CHECK_FUNCS([getopt_long])
+AC_STRUCT_ST_BLOCKS
 
 AC_CONFIG_HEADER([src/config.h])
 AC_CONFIG_FILES([
