--- a/.github/workflows/regress.yml
+++ b/.github/workflows/regress.yml
@@ -82,3 +82,24 @@ jobs:
       run: make
     - name: make check
       run: make check
+
+  build-windows-msys-mingw64:
+    runs-on: windows-latest
+    defaults:
+      run:
+        shell: msys2 {0}
+    steps:
+    - uses: msys2/setup-msys2@v2
+    - uses: actions/checkout@v2
+    - name: autoreconf
+      run: autoreconf --install
+    - name: configure
+      run: ./configure
+    - name: make
+      run: make
+    - name: simple test
+      run: bin/simple-test.sh
+    - name: make check
+      run: make check
+    - name: make distcheck
+      run: make distcheck
