--- a/.github/workflows/regress-1.x.yml
+++ b/.github/workflows/regress-1.x.yml
@@ -39,30 +39,30 @@ jobs:
     - name: make distcheck
       run: make distcheck
 
-  build-windows:
-    runs-on: windows-latest
-    defaults:
-      run:
-        shell: msys2 {0}
-    steps:
-    - uses: msys2/setup-msys2@v2
-      with:
-        msystem: mingw64
-        install: >-
-          autoconf
-          automake1.16
-          base-devel
-          bison
-          flex
-          mingw-w64-x86_64-toolchain
-    - uses: actions/checkout@v2
-    - name: autoreconf
-      run: autoreconf --install
-    - name: configure
-      run: ./configure
-    - name: make
-      run: make
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
+#  build-windows:
+#    runs-on: windows-latest
+#    defaults:
+#      run:
+#        shell: msys2 {0}
+#    steps:
+#    - uses: msys2/setup-msys2@v2
+#      with:
+#        msystem: mingw64
+#        install: >-
+#          autoconf
+#          automake1.16
+#          base-devel
+#          bison
+#          flex
+#          mingw-w64-x86_64-toolchain
+#    - uses: actions/checkout@v2
+#    - name: autoreconf
+#      run: autoreconf --install
+#    - name: configure
+#      run: ./configure
+#    - name: make
+#      run: make
+#    - name: make check
+#      run: make check
+#    - name: make distcheck
+#      run: make distcheck
