Add explicit large file support via autoconf (resolves #81)

--- a/configure.ac
+++ b/configure.ac
@@ -9,6 +9,8 @@ AC_PROG_YACC
 AC_CHECK_FUNCS([getopt_long])
 AC_STRUCT_ST_BLOCKS
 
+AC_SYS_LARGEFILE
+
 AC_CONFIG_HEADER([src/config.h])
 AC_CONFIG_FILES([
  Makefile
