Autoconf macros have been updated to support 2.70 changes (resolves #82)

--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@ AC_INIT([detox], [1.4.4], [detox.dharple at gmail.com], [], [https://github.com/
 AM_INIT_AUTOMAKE([foreign -Wall -Werror])
 
 AC_PROG_CC
-AM_PROG_LEX
+AM_PROG_LEX([noyywrap])
 AC_PROG_YACC
 
 AC_CHECK_FUNCS([getopt_long])
@@ -11,7 +11,7 @@ AC_STRUCT_ST_BLOCKS
 
 AC_SYS_LARGEFILE
 
-AC_CONFIG_HEADER([src/config.h])
+AC_CONFIG_HEADERS([src/config.h])
 AC_CONFIG_FILES([
  Makefile
  src/Makefile
